--- a/notescollector/main_app/templates/home.html
+++ b/notescollector/main_app/templates/home.html
@@ -12,7 +12,7 @@
     <br/>
     <br/>
     For Duke Ellington, a D note looked like dark blue burlap while a G was light blue satin. When Pharrell Williams listened to Earth, 
-    Wind & Fire as a kid, he saw burgundy or baby blue. For Kanye West, pianos are blue, snares are white, and basslines are dark brown and purple. 
+    Wind and Fire as a kid, he saw burgundy or baby blue. For Kanye West, pianos are blue, snares are white, and basslines are dark brown and purple. 
     Orange is a big one for Frank Ocean.
     <br/>
     <br/>
