--- a/notescollector/main_app/templates/notes/detail.html
+++ b/notescollector/main_app/templates/notes/detail.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load main_app_extras %}
 {% block content %}
 
 <h1> Note Detail</h1>
 
+{% comment %} Main section of the page {% endcomment %}
 <div class="row">
-{% comment %} Note Details {% endcomment %}
+
+    {% comment %} Note Details {% endcomment %}
     <div class="col s6">
         <div class="card {{ note.color }} lighten-3">
             <div class="card-content">
@@ -17,23 +19,28 @@
             </div>
         </div>
 
+        {% comment %} HTML audio player {% endcomment %}
         <audio controls id="audio">
-            <source src="{% static 'audio/1.mp3' %}" type="audio/mp3">
+            {% with "/audio/"|addstr:note.number|addstr:".mp3" as audio_static %}
+            <source src="{% static audio_static %}" type="audio/mp3">
+            {% endwith %}
             Your browser does not support the audio element.
         </audio>
 
+        {% comment %} Guest (Person) name and color {% endcomment %}
         <h5>What color associates with this sound?</h5>
         <p>Add your name and your association</p>
     </div>
 
+  {% comment %} Form with a color to submit {% endcomment %}
   <div class="col s6">
-  {% comment %} Form to submit {% endcomment %}
     <form action="{% url 'add_person' note.id %}" method="post">
         {% csrf_token %}
         {{ person_form.as_p }}
         <input type="submit" class="btn" value="Add Color">
     </form>
-{% comment %} Name and Associated color {% endcomment %}    
+
+    {% comment %} User name and associated color will appear in this section {% endcomment %}    
     <table class="striped">
         <thead>
             <tr><th>Your name</th><th>Associated color</th></tr>
@@ -51,34 +58,39 @@
 </div>
 
 <hr>
+
+{% comment %} Section for already associated art {% endcomment %}
 <div class="row">
   <div class="col s6">
     <h4>Associated art with {{ note.name }} note:</h4>
     {% if note.pictures.count %}
       {% for picture in note.pictures.all %}
-       <div class="col s12 m6">
-              <div class="card">
-                <div class="card-image">
-                  <img src="{{ picture.link }}">
-                </div>
 
-                <div class="card-content">
-                    <span class="card-title">{{ picture.name }}</span>
-                </div>
-              </div>
+      {% comment %} The actual picture art {% endcomment %}
+       <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{ picture.link }}">
             </div>
+            <div class="card-content">
+              <span class="card-title">{{ picture.name }}</span>
+            </div>
+          </div>
+        </div>
+
       {% endfor %}
     {% else %}
       <h5>Add a first art that associates with {{ note.name }} note </h5>
     {% endif %}
 </div>
 
-
 {% comment %} Available Art {% endcomment %}
 <div class="col s6">
     <h3>Available for association</h3>
     {% if pictures.count %}
       {% for picture in pictures.all %}
+
+        {% comment %} The card with picture and button 'Add' {% endcomment %}
         <div class="col s8 m5">
             <div class="card">
                 <div class="card-image">
@@ -87,7 +99,6 @@
                 <div class="card-content">
                     <span class="card-title">{{ picture.name }}</span>
                 </div>
-    
                 <div class="card-action">
                     <form action="{% url 'assoc_picture' note.id picture.id %}" method="post">
                       {% csrf_token %}
@@ -102,6 +113,7 @@
     {% endif %}
 </div>
 
+{% comment %} Section that initializes colors in the dropdown section where user can pic a color {% endcomment %}
 <script>
     let selectColor = document.getElementById('id_color');
     M.FormSelect.init(selectColor);
