--- a/synesthesia/main_app/templates/base.html
+++ b/synesthesia/main_app/templates/base.html
@@ -39,6 +39,7 @@
           {% else %}
             {% comment %} What NOT AUTHORIZED user can see on navbar {% endcomment %}
             <li class="tab"><a href="/about">About</a></li>
+            <li class="tab disabled"><a href="{% url 'pictures_index' %}">Gallery of art</a></li>
             <li class="tab"><a href="/notes">Notes</a></li>
             <li class="tab"><a href="{% url 'login' %}">Log In</a></li>
             <li class="tab"><a href="{% url 'signup' %}">Sign Up</a></li>
