--- a/synesthesia/main_app/templates/base.html
+++ b/synesthesia/main_app/templates/base.html
@@ -33,7 +33,7 @@
             <li class="tab"><a class="active" href="{% url 'pictures_create' %}">Add art</a></li>
             <li class="tab disabled"><a href="{% url 'pictures_index' %}">Gallery of art</a></li>
             <li class="tab"><a href="/notes">Notes</a></li>
-            <li class="tab"><a href="{% url 'profile' user.id%}">Profile</a></li>
+            <li class="tab"><a href="{% url 'profile' user.username%}">Profile</a></li>
 
             <li class="tab"><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
