--- a/synesthesia/main_app/templates/user/confirm_delete_user.html
+++ b/synesthesia/main_app/templates/user/confirm_delete_user.html
@@ -4,10 +4,10 @@
 
   <h4>Are you sure you want to delete <span class="teal-text">{{ user }}</span>?</h4>
 
-  <form action="{% url 'delete_profile' user.id %}" method="POST">
+  <form action="{% url 'delete_profile' user.username %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Delete" class="btn">
-    <a href="{% url 'profile' user.id %}">Cancel</a>
+    <a href="{% url 'profile' user.username %}">Cancel</a>
   </form>
 
 {% endblock %}
