--- a/synesthesia/main_app/templates/registration/signup.html
+++ b/synesthesia/main_app/templates/registration/signup.html
@@ -8,7 +8,8 @@
 {% comment %} Form with user's data to signup {% endcomment %}
 <form method="post" action="{% url 'signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ user_form.as_p }}
+  {% comment %} {{ profile_form.as_p }} {% endcomment %}
   <input type="submit" class="btn" value="signup">
 </form>
 
