Removed helptext from sugnup form

--- a/synesthesia/main_app/templates/registration/signup.html
+++ b/synesthesia/main_app/templates/registration/signup.html
@@ -8,8 +8,19 @@
 {% comment %} Form with user's data to signup {% endcomment %}
 <form method="post" action="{% url 'signup' %}">
   {% csrf_token %}
-  {{ user_form.as_p }}
-  {% comment %} {{ profile_form.as_p }} {% endcomment %}
+  {% comment %} {{ user_form.as_p }} {% endcomment %}
+  {% for field in user_form %}
+    <div class="fieldWrapper">
+      {% for error in  field.errors%}
+        <p class="error">{{ error }}</p>
+      {% endfor %}
+        {% comment %} {{ field.errors }} {% endcomment %}
+        {{ field.label_tag }} {{ field }}
+        {% if field.help_text %}
+          {{ pass }}
+        {% endif %}
+    </div>
+{% endfor %}
   <input type="submit" class="btn" value="signup">
 </form>
 
