--- a/synesthesia/main_app/templates/registration/signup.html
+++ b/synesthesia/main_app/templates/registration/signup.html
@@ -21,7 +21,7 @@
         {% endif %}
     </div>
 {% endfor %}
-  <input type="submit" class="btn" value="signup">
+  <input type="submit" class="btn box" value="signup">
 </form>
 
 {% endblock content %}
