--- a/synesthesia/main_app/templates/main_app/picture_index.html
+++ b/synesthesia/main_app/templates/main_app/picture_index.html
@@ -3,22 +3,23 @@
 
 <h1>All Pictures</h1>
 
-{% for picture in pictures %}
+
+<div class="container">
+  {% for picture in pictures %}
     <a href="{% url 'picture_detail' picture.id %}">
-      <div class="row">
-        <div class="col s11 m9">
-          <div class="card">
-            <div class="card-image">
-              <img src="{{ picture.link }}">
-            </div>
-            <div class="card-content">
-                <span class="card-title">{{ picture.name }}</span>
-                <p>{{ picture.description }}</p>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6 mt-5">
+          <div class="card" id="gallery">
+            <img src="{{picture.link}}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{picture.name}}</h5>
+              <p class="card-text">{{picture.description}}</p>
+              <a href="#" class="btn btn-primary box">EDIT</a>
             </div>
           </div>
         </div>
       </div>
     </a>
-{% endfor %}
-
+  {% endfor %}
+</div>
 {% endblock %}
