--- a/synesthesia/main_app/templates/main_app/picture_confirm_delete.html
+++ b/synesthesia/main_app/templates/main_app/picture_confirm_delete.html
@@ -2,13 +2,12 @@
 {% block content %}
 
 <h1>Delete Picture</h1>
-<h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
+<h4>Are you sure you want to delete <span class="teal-text">{{ picture.name }}</span>?</h4>
 
-{% comment %} Confirmation of delete {% endcomment %}
-<form action="" method="POST">
+<form action="{% url 'pictures_delete' picture.name %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes" class="btn">
-    <a href="{% url 'picture_detail' object.id %}">Cancel</a>
+    <a href="{% url 'picture_detail' picture.name %}">Cancel</a>
 </form>
 
 {% endblock content %}
