--- a/synesthesia/main_app/static/css/style.css
+++ b/synesthesia/main_app/static/css/style.css
@@ -4,6 +4,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
@@ -17,23 +18,19 @@ nav {
   width: 100%;
 }
 
-.navbar-brand {
-  color: white;
-}
-
 .tab {
   padding-right: 15px;
-  
 }
 
 nav a {
   color: white;
 }
 
-.tab :hover {
+.tab a:hover {
+  text-shadow: 1px 1px 2px;
+  color: white;
   cursor: pointer;
   text-decoration: none;
-  color: inherit;
 }
 
 /* FOOTER */
@@ -43,7 +40,7 @@ footer {
   display: flex;
   align-items: center;
   text-align: center;
-  background-image: linear-gradient(260deg,  #C16ECF 100%, #2376AE 0);
+  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
 
 #copyright {
@@ -69,6 +66,18 @@ form #id_username, #id_password, #id_password1, #id_password2, #id_name, #id_lin
 
 form p {
   font-size: 20px;
+}
+
+p label {
+  font-size: 15px;
+}
+
+.error {
+  font-size: 10px;
+  padding: 0px;
+  margin-top: 10px;
+  margin-bottom: 0;
+  color: orangered;
 }
 
 .box {
