--- a/synesthesia/main_app/templates/base.html
+++ b/synesthesia/main_app/templates/base.html
@@ -18,7 +18,7 @@
 <body>
   <header class="content-container">
     <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
-      <a class="navbar-brand" href="/">Synesthesia</a>
+      <a class="navbar-brand text-white" href="/">Synesthesia</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
