--- a/synesthesia/main_app/templates/registration/login.html
+++ b/synesthesia/main_app/templates/registration/login.html
@@ -8,7 +8,7 @@
   {% csrf_token %}
   {{ form.as_p }}
   </div>
-  <input type="submit" class="btn box" value="login">
+  <input type="submit" class="btn btn-primary box" value="login">
   <input type="hidden" name="next" value="{{ next }}">
 </form>
 
