--- a/synesthesia/main_app/templates/notes/index.html
+++ b/synesthesia/main_app/templates/notes/index.html
@@ -3,7 +3,7 @@
 <h1>Notes List</h1>
 
 {% for note in notes %}
-<a href="{% url 'detail' note.id %}">
+{% comment %} <a href="{% url 'detail' note.id %}">
   <div class="card {{ note.color }} lighten-3">
     <div class="card-content">
       <span class="card-title">{{ note.name }}</span>
@@ -12,7 +12,22 @@
       <p>Number: {{ note.number }}</p>
     </div>
   </div>
-</a>
+</a> {% endcomment %}
 {% endfor %}
 
 {% endblock %}
+
+    <a href="{% url 'detail' note.id %}">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6 mt-5">
+          <div class="card" id="gallery">
+            <img src="{{picture.link}}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{picture.name}}</h5>
+              <p class="card-text">{{picture.description}}</p>
+              <a href="#" class="btn btn-primary box">EDIT</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
