bootstrapped the notes index

--- a/synesthesia/main_app/templates/notes/index.html
+++ b/synesthesia/main_app/templates/notes/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 <h1>Notes List</h1>
 
-{% for note in notes %}
-{% comment %} <a href="{% url 'detail' note.id %}">
+{% comment %} {% for note in notes %}
+<a href="{% url 'detail' note.id %}">
   <div class="card {{ note.color }} lighten-3">
     <div class="card-content">
       <span class="card-title">{{ note.name }}</span>
@@ -12,22 +12,26 @@
       <p>Number: {{ note.number }}</p>
     </div>
   </div>
-</a> {% endcomment %}
+</a>
+{% endfor %}
+
+{% endblock %} {% endcomment %}
+
+{% for note in notes %}
+<a href="{% url 'detail' note.id %}">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6 mt-5">
+      <div class="card-content">
+        <div class="card-body text-body" style="background-color:{{note.color}}">
+            <span class="card-title">{{note.name}}</span>
+            <p>Color: {{ note.color }}</p>
+            <p>Description: {{ note.description }}</p>
+            <p>Number: {{ note.number }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</a>
 {% endfor %}
 
 {% endblock %}
-
-    <a href="{% url 'detail' note.id %}">
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-6 mt-5">
-          <div class="card" id="gallery">
-            <img src="{{picture.link}}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{picture.name}}</h5>
-              <p class="card-text">{{picture.description}}</p>
-              <a href="#" class="btn btn-primary box">EDIT</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
