added color background to note cards

--- a/synesthesia/main_app/templates/notes/detail.html
+++ b/synesthesia/main_app/templates/notes/detail.html
@@ -6,7 +6,7 @@
 <h1> Note Detail</h1>
 
 {% comment %} Main section of the page {% endcomment %}
-<div class="row">
+{% comment %} <div class="row">
 
     {% comment %} Note Details {% endcomment %}
     <div class="col s6">
@@ -120,4 +120,5 @@
 </script>
 
 {% endblock %}
+
 
