--- a/synesthesia/main_app/templates/about.html
+++ b/synesthesia/main_app/templates/about.html
@@ -1,15 +1,37 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-    <h1>About the project</h1>
-    <hr>
-    <p> 
-    Here you can listen all 7 main notes and associate them with a color and art.
-    <br> 
-    <br> 
-    Here you also can add your own art to the gallery and associate it with a note.
-    <br> 
-    If you want to read about synesthesia on the home page click -><span><a href="/">here</a></span>
-    <br> 
-    <h5>Have fun!<h5>
-    </p>
+
+<h1>About</h1>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-6 col-md-4">
+            <div class="card" id="name">
+              <img src="https://cdn.pixabay.com/photo/2015/11/15/22/09/cat-1044914_960_720.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-6 col-md-4">
+            <div class="card" id="name">
+              <img src="{% static "images/lia.jpg"%}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text"> A sowftware engineer with experience in classical music. <hr>
+                "I wish one day I would debug a debugger."</p>
+            </div>
+            </div>
+        </div>
+        <div class="col-6 col-md-4">
+            <div class="card" id="name">
+              <img src="https://cdn.pixabay.com/photo/2015/11/15/22/09/cat-1044914_960_720.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock  %}
