--- a/synesthesia/main_app/templates/main_app/picture_confirm_delete.html
+++ b/synesthesia/main_app/templates/main_app/picture_confirm_delete.html
@@ -2,12 +2,21 @@
 {% block content %}
 
 <h1>Delete Picture</h1>
-<h4>Are you sure you want to delete <span class="teal-text">{{ picture.name }}</span>?</h4>
+<div class="container">
+    <div class="row mt-5">
+        <h4>Are you sure you want to delete <span class="text-info">{{ picture.name }}</span>?</h4>
 
-<form action="{% url 'pictures_delete' picture.name %}" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="Yes" class="btn">
-    <a href="{% url 'picture_detail' picture.name %}">Cancel</a>
-</form>
-
+        <div class="col-md-12">
+            <form action="{% url 'pictures_delete' picture.name %}" method="POST">
+                {% csrf_token %}
+                <div id="confirm">
+                    <div>
+                        <a href="{% url 'picture_detail' picture.name %}">Cancel</a>
+                        <input type="submit" value="Yes" class="box">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock content %}
