--- a/synesthesia/main_app/templates/main_app/picture_form.html
+++ b/synesthesia/main_app/templates/main_app/picture_form.html
@@ -6,7 +6,7 @@
         <form  method="POST">
           {% csrf_token %}
           {{form.as_p}}
-          <button class="btn" type="submit">Save</button>
+          <button class="btn btn-primary box" type="submit">Save</button>
         </form>
     </section>
 {% endblock %}
