--- a/synesthesia/main_app/templates/user/confirm_delete_user.html
+++ b/synesthesia/main_app/templates/user/confirm_delete_user.html
@@ -1,13 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Delete</h1>
+<h1>Delete User</h1>
 
-  <h4>Are you sure you want to delete <span class="teal-text">{{ user }}</span>?</h4>
-
-  <form action="{% url 'delete_profile' user.username %}" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="Delete" class="btn">
-    <a href="{% url 'profile' user.username %}">Cancel</a>
-  </form>
+  <div class="container">
+      <div class="row mt-5">
+        <h4>Are you sure you want to delete <span class="text-info">{{ user }}</span>?</h4>
+          <div class="col-md-12">
+              <form action="{% url 'delete_profile' user.username %}" method="POST">
+                {% csrf_token %}
+                <div id="confirm">
+                    <div>
+                        <a href="{% url 'profile' user.username %}">Cancel</a>
+                        <input type="submit" value="Delete" class="btn box">
+                    </div>
+                </div>
+              </form> 
+          </div>
+      </div>
+  </div>
 
 {% endblock %}
