--- a/synesthesia/main_app/templates/about.html
+++ b/synesthesia/main_app/templates/about.html
@@ -8,9 +8,12 @@
     <div class="row">
         <div class="col-6 col-md-4">
             <div class="card" id="name">
-              <img src="https://cdn.pixabay.com/photo/2015/11/15/22/09/cat-1044914_960_720.jpg" class="card-img-top" alt="...">
+              <img src="{% static "images/angel.jpg"%}" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Angel Rodriguez</h5>
+                <p class="card-text">Soccer aficionado and fry connoisseur. Currently surviving an apocalypse while learning python.<hr>
+                "My code carries with it the message of pain" -!Frida Kahlo
+                </p>
               </div>
             </div>
         </div>
@@ -18,6 +21,7 @@
             <div class="card" id="name">
               <img src="{% static "images/lia.jpg"%}" class="card-img-top" alt="...">
               <div class="card-body">
+                <h5 class="card-title">Lia Tsernant</h5>
                 <p class="card-text"> A sowftware engineer with experience in classical music. <hr>
                 "I wish one day I would debug a debugger."</p>
             </div>
@@ -27,6 +31,7 @@
             <div class="card" id="name">
               <img src="https://cdn.pixabay.com/photo/2015/11/15/22/09/cat-1044914_960_720.jpg" class="card-img-top" alt="...">
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
