--- a/synesthesia/main_app/static/css/style.css
+++ b/synesthesia/main_app/static/css/style.css
@@ -108,6 +108,18 @@ button a {
   object-fit: cover;
 }
 
+#note-card {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+}
+
+#note-detail img {
+  width: 100%;
+  object-fit: cover;
+  max-height: 200px;
+  border-radius: 10px;
+}
 
 .box {
   background-color: #C16ECF;
