--- a/synesthesia/main_app/templates/about.html
+++ b/synesthesia/main_app/templates/about.html
@@ -12,7 +12,7 @@
               <div class="card-body">
                 <h5 class="card-title">Angel Rodriguez</h5>
                 <p class="card-text">Soccer aficionado and fry connoisseur. Currently surviving an apocalypse while learning python.<hr>
-                "My code carries with it the message of pain" -!Frida Kahlo
+                    "My code carries with it the message of pain" -!Frida Kahlo
                 </p>
               </div>
             </div>
@@ -23,16 +23,20 @@
               <div class="card-body">
                 <h5 class="card-title">Lia Tsernant</h5>
                 <p class="card-text"> A sowftware engineer with experience in classical music. <hr>
-                "I wish one day I would debug a debugger."</p>
+                    "I wish one day I would debug a debugger."</p>
             </div>
             </div>
         </div>
         <div class="col-6 col-md-4">
             <div class="card" id="name">
-              <img src="https://cdn.pixabay.com/photo/2015/11/15/22/09/cat-1044914_960_720.jpg" class="card-img-top" alt="...">
+              <img src="{% static "images/Jesus.jpg"%}" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Jesus Quezada</h5>
+                <p class="card-text">Just a guy honing the craft of Software Development.
+                    I only ask you, to not tell the IRS about the applications I'm secretly building. Just kidding?<hr>
+                    "You work on commission right?... Big Mistake! Big! Huge!"
+                    Julia Roberts as Miss Vivian Ward (Pretty Woman)
+                 </p>
               </div>
             </div>
         </div>
