--- a/synesthesia/main_app/templates/notes/detail.html
+++ b/synesthesia/main_app/templates/notes/detail.html
@@ -5,120 +5,135 @@
 
 <h1> Note Detail</h1>
 
-{% comment %} Main section of the page {% endcomment %}
-{% comment %} <div class="row">
+{% comment %} Note Details {% endcomment %}
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">        
+        <div class="card">
+          <div class="card-body" style="background-color: {{note.color}}; opacity: 0.9;">
+            <span class="card-title"> Card{{ note.name }}</span>
+            <p>Color: {{ note.color }}</p>
+            <p>Description: {{ note.description }}</p>
+            <p>Number: {{ note.number }}</p>
+          </div>
 
-    {% comment %} Note Details {% endcomment %}
-    <div class="col s6">
-        <div class="card {{ note.color }} lighten-3">
-            <div class="card-content">
-              <span class="card-title">{{ note.name }}</span>
-              <p>Color: {{ note.color }}</p>
-              <p>Description: {{ note.description }}</p>
-              <p>Number: {{ note.number }}</p>
-            </div>
-        </div>
-
-        {% comment %} HTML audio player {% endcomment %}
-        <audio controls id="audio">
+          <audio controls id="audio">
             {% with "/audio/"|addstr:note.number|addstr:".mp3" as audio_static %}
             <source src="{% static audio_static %}" type="audio/mp3">
             {% endwith %}
             Your browser does not support the audio element.
-        </audio>
-
-        {% comment %} Guest (Person) name and color {% endcomment %}
-        <h5>What color associates with this sound?</h5>
-        <p>Add your name and your association</p>
+          </audio>
+        </div>
+      </div>
     </div>
 
-  {% comment %} Form with a color to submit {% endcomment %}
-  <div class="col s6">
-    <form action="{% url 'add_person' note.id %}" method="post">
-        {% csrf_token %}
-        {{ person_form.as_p }}
-        <input type="submit" class="btn" value="Add Color">
-    </form>
+    {% comment %} DO NOT TOUCH THIS!!!!!!!!!!!!!!! {% endcomment %}
+    <div class="col-sm">
+      <div class="container">        
+        <div class="card">
+          <div class="card-body">
+            <h5>What color associates with this sound?</h5>
+            <p>Add your name and your association</p>
 
-    {% comment %} User name and associated color will appear in this section {% endcomment %}    
-    <table class="striped">
-        <thead>
-            <tr><th>Your name</th><th>Associated color</th></tr>
-        </thead>
-        <tbody>
-            {% for person in note.person_set.all %}
-              <tr>
-                <td>{{person.name}}</td>
-                <td class="{{person.color}} lighten-3">{{person.get_color_display}}</td>
-              </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            {% comment %} Form for guest record {% endcomment %}
+            <form action="{% url 'add_person' note.id %}" method="post">
+              {% csrf_token %}
+              {{ person_form.as_p }}
+              <input type="submit" class="btn btn-primary box" value="Add Color">
+            </form>
+          </div>
+        </div>
+
+      {% comment %} TABLE WITH GUEST RECORDS {% endcomment %}
+        <div class="container mt-3">
+          <div class="row">
+            <div class="col">
+                <p>Your Name</p>
+            </div>
+
+            <div class="col">
+                <p>Associated color</p>
+            </div>
+          </div>
+
+          {% for person in note.person_set.all %}
+            <div class="row">
+              <div class="col">
+                  <p class="p-2">{{person.name}}</p>
+              </div>
+  
+              <div class="col">
+                  <p class="p-2"style="background-color: {{person.color}}">{{person.get_color_display}}</p>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 <hr>
 
-{% comment %} Section for already associated art {% endcomment %}
-<div class="row">
-  <div class="col s6">
-    <h4>Associated art with {{ note.name }} note:</h4>
-    {% if note.pictures.count %}
-      {% for picture in note.pictures.all %}
 
-      {% comment %} The actual picture art {% endcomment %}
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="{{ picture.link }}">
-            </div>
-            <div class="card-content">
-              <span class="card-title">{{ picture.name }}</span>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+        <h4>Associated art with {{ note.name }} note:</h4>
+        {% if note.pictures.count %}
+          {% for picture in note.pictures.all %}
+          {% comment %} The actual picture art {% endcomment %}
+          <div class="card" style="width: 18rem;">
+            <img src="{{picture.link}}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{picture.name}}</h5>
+              <p class="card-text">{{picture.description}}</p>
             </div>
           </div>
-        </div>
+          {% endfor %}
+        {% else %}
+          <h5>Add a first art that associates with {{ note.name }} note </h5>
+        {% endif %}
+    </div>
 
-      {% endfor %}
-    {% else %}
-      <h5>Add a first art that associates with {{ note.name }} note </h5>
-    {% endif %}
-</div>
-
-{% comment %} Available Art {% endcomment %}
-<div class="col s6">
-    <h3>Available for association</h3>
-    {% if pictures.count %}
-      {% for picture in pictures.all %}
-
-        {% comment %} The card with picture and button 'Add' {% endcomment %}
-        <div class="col s8 m5">
-            <div class="card">
-                <div class="card-image">
-                  <img src="{{ picture.link }}">
-                </div>
-                <div class="card-content">
-                    <span class="card-title">{{ picture.name }}</span>
-                </div>
-                <div class="card-action">
-                    <form action="{% url 'assoc_picture' note.id picture.id %}" method="post">
-                      {% csrf_token %}
-                      <button type="submit" class="btn">Add</button>
-                    </form>
-              </div>
+      <div class="col-6">
+        <h4>Available for association</h4>
+        {% if pictures.count %}
+          {% for picture in pictures.all %}
+          {% comment %} The actual picture art {% endcomment %}
+          <div class="card" style="width: 18rem;">
+            <img src="{{picture.link}}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{picture.name}}</h5>
+              <p class="card-text">{{picture.description}}</p>
+              <form action="{% url 'assoc_picture' note.id picture.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn box">Add</button>
+              </form>
             </div>
-        </div>
-      {% endfor %}
-    {% else %}
-      <h5>{{cat.name}} Add a new art to the gallery</h5>
-    {% endif %}
+          </div>
+          {% endfor %}
+        {% else %}
+          <h5>Add a first art that associates with {{ note.name }} note </h5>
+        {% endif %}
+      </div>
+    </div>
+  </div>
 </div>
 
-{% comment %} Section that initializes colors in the dropdown section where user can pic a color {% endcomment %}
+
+
 <script>
     let selectColor = document.getElementById('id_color');
     M.FormSelect.init(selectColor);
 </script>
-
+ 
 {% endblock %}
+
+
+
 
 
