Adde media query for logo

--- a/synesthesia/main_app/static/css/style.css
+++ b/synesthesia/main_app/static/css/style.css
@@ -180,3 +180,9 @@ button a {
   transition: 0.25s;
   cursor: pointer;
 }
+
+@media (max-width: 1200px) {
+  #landingLogo{
+    display: none;
+  }
+}
