--- a/synesthesia/main_app/templates/about.html
+++ b/synesthesia/main_app/templates/about.html
@@ -22,7 +22,7 @@
               <img src="{% static "images/lia.jpg"%}" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Lia Tsernant</h5>
-                <p class="card-text animated fadeInUp callToAction"> A sowftware engineer with experience in classical music. <hr>
+                <p class="card-text animated fadeInUp callToAction"> A software engineer with experience in classical music. <hr>
                     "I wish one day I would debug a debugger."</p>
             </div>
             </div>
